# iced-plus

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/iced_plus/: Cargo.toml
crates/iced_plus/src/: lib.rs
crates/iced_plus_components/: Cargo.toml
crates/iced_plus_components/src/: alert.rs  avatar.rs  badge.rs  button.rs  card.rs  checkbox.rs  color_picker.rs  divider.rs  drawer.rs  icons.rs  image.rs  lib.rs  media.rs  menu.rs  navbar.rs  private.rs  progress.rs  radio.rs  rich_text.rs  scrollable.rs  select.rs  skeleton.rs  slider.rs  spinner.rs  switch.rs  tabs.rs  text.rs  textarea.rs  toast.rs  tooltip.rs  webview.rs
crates/iced_plus_components/src/input/: mod.rs  text_input.rs
crates/iced_plus_layouts/: Cargo.toml
crates/iced_plus_layouts/src/: direction.rs  lib.rs  overlay.rs  responsive.rs  shell.rs  stack.rs
crates/iced_plus_platform/: Cargo.toml
crates/iced_plus_platform/src/: audio.rs  hotkeys.rs  lib.rs  notifications.rs  recording.rs  tray.rs  webview.rs  window.rs
crates/iced_plus_theme/: Cargo.toml
crates/iced_plus_theme/src/: lib.rs  size.rs  status.rs  theme.rs  variant.rs
crates/iced_plus_theme/src/catalog/: button.rs  container.rs  mod.rs  text.rs  text_input.rs
crates/iced_plus_tokens/: Cargo.toml
crates/iced_plus_tokens/src/: elevation.rs  lib.rs  motion.rs  presets.rs  private.rs  radius.rs  spacing.rs  tokens.rs  typography.rs
crates/iced_plus_tokens/src/color/: mod.rs  palette.rs  scale.rs
docs/: components.md  design-system.md  layouts.md  overview.md  platform.md
documentation/: mkdocs.yml
documentation/docs/: api-reference.md  getting-started.md  index.md
documentation/docs/components/: buttons.md  inputs.md  media.md  overview.md
documentation/docs/design-system/: theming.md  tokens.md
documentation/docs/examples/: kitchen-sink.md
documentation/docs/layouts/: app-shell.md  responsive.md  stacks.md
documentation/docs/platform/: notifications.md  overview.md  tray.md  webview.md
examples/kitchen_sink/: Cargo.toml
examples/kitchen_sink/src/: audio_backend.rs  main.rs  webcam_backend.rs  webview_backend.rs
