[package]
name = "iced_plus_layouts"
description = "Layout primitives for iced-plus: HStack, VStack, Split, AppShell"
categories = ["gui", "graphics"]
documentation = "https://docs.neullabs.com/iced-plus"
edition.workspace = true
homepage = "https://docs.neullabs.com/iced-plus"
keywords = ["iced", "layout", "ui", "gui", "widgets"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["stacks", "shell", "overlay", "responsive"]
stacks = []
shell = []
overlay = []
responsive = []
split = []
full = ["stacks", "shell", "overlay", "responsive", "split"]

[dependencies]
iced_plus_tokens = { workspace = true }
iced = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
