[package]
name = "iced_plus_theme"
description = "Theme bridge for iced-plus: adapts tokens to iced's styling system"
categories = ["gui", "graphics"]
documentation = "https://docs.neullabs.com/iced-plus"
edition.workspace = true
homepage = "https://docs.neullabs.com/iced-plus"
keywords = ["iced", "theme", "styling", "ui", "gui"]
license.workspace = true
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["button", "text", "text-input", "container"]
button = []
text = []
text-input = []
container = []
checkbox = []
slider = []
all-widgets = ["button", "text", "text-input", "container", "checkbox", "slider"]

[dependencies]
iced_plus_tokens = { workspace = true }
iced = { workspace = true }

[lints]
workspace = true
