[package]
name = "iced_plus_tokens"
description = "Design tokens for iced-plus: colors, typography, spacing, elevation, and motion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["preset-light", "preset-dark"]
preset-light = []
preset-dark = []
serde = ["dep:serde"]

[dependencies]
serde = { workspace = true, optional = true }

[lints]
workspace = true
